--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    width: 100%;
+    max-height: 200px;
+    overflow: auto;
+  }
+  ::-webkit-scrollbar {
+    width: 7px;
+    height: 7px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+      background-color: #a8a8a8
+  }
+  ::-webkit-scrollbar-track
+  {
+      -webkit-box-shadow: inset 0 0 6px rgba(168,168,168,255);
+      background-color: #F5F5F5;
+  }
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(168,168,168,255);
+    background-color: #c1c1c1;
+  }
+  ::-webkit-scrollbar-thumb:window-inactive {
+    background: rgba(255, 255, 255, 0.3);
+  }
+
+@import '../src/assets/styles/authentication/page.scss';
+  
